# self-rag-chat

./: .env.template  .gitignore  Makefile  README.md  alembic.ini  compose.yaml  const.py  create_index.py  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: 906bc5dddc73_auto.py  f37affddc795_auto.py  f390563d70c3_auto.py  fbe989d444d2_auto.py
model/: __init__.py  document.py
web/: package-lock.json  package.json  tsconfig.json
web/src/: App.tsx  index.tsx  util.ts
web/src/gpt/: api.ts
